deployment/k8s/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stayhub
  labels:
    name: stayhub
    environment: production
